<resources>
    <string name="app_name">Boutique MonPullMoch</string>
    <string name="app_footer">Réalisé par G. Moirod, S. Seigneur, D. Diani, 2021</string>string>
    <string name="vc_btn_precedent">&lt;</string>
    <string name="vc_btn_suivant">&gt;</string>
    <string name="vc_btn_annuler">Annuler</string>
    <string name="vc_txt_tarifproduit">Tarif : %1$.2f \u20ac</string>
    <string name="vc_ajout_panier">Produit n°%1$d ajouté au panier</string>
    <string name="confirm_oui">Oui</string>
    <string name="confirm_non">Non</string>
    <string name="confirm_titre">Demande de confirmation</string>
    <string name="confirm_phrase">Attention, vous allez annuler tous les achats effectués sur cette page. Etes-vous sûr ?</string>
    <string name="ac_txt_panier">%1$.2f</string>
    <string name="ac_rb_vente">Vente</string>
    <string name="ac_rb_catalogue">Catalogue</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_gestion_panier">Votre Panier</string>
    <string name="action_settings">Settings</string>

    <string name="identifiant">Identifiant</string>
    <string name="password">Password</string>

    <string name="menu_boutique">Boutique</string>
    <string name="menu_connexion">Connexion</string>
    <string name="menu_mon_compte">Mon Compte</string>
    <string name="menu_nous_trouver">Nous Trouver</string>
    <string name="menu_mentions_legales">Mentions Légales</string>
</resources>
