<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_boutique"
            android:icon="@drawable/ic_baseline_shop_24"
            android:title="@string/menu_boutique" />
        <item
            android:id="@+id/nav_connexion"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_connexion" />
        <item
            android:id="@+id/nav_nous_trouver"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_nous_trouver" />
        <item
            android:id="@+id/nav_mentions_legales"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_mentions_legales" />


    </group>
</menu>
