<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VenteCatalogueFragment">


    <ImageView
        android:id="@+id/img_produit_zoom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_panier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="647dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:src="@drawable/ic_basket_ajout_48"
        app:layout_constraintBottom_toTopOf="@+id/txt_footer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_precedent"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/vc_btn_precedent"
        android:theme="@style/boutongrise"
        app:layout_constraintBottom_toBottomOf="@id/img_produit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/img_produit"
        app:layout_constraintTop_toTopOf="@+id/img_produit" />

    <ImageView
        android:id="@+id/img_produit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toRightOf="@id/btn_precedent"
        app:layout_constraintRight_toLeftOf="@id/btn_suivant"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_suivant"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
       android:text="@string/vc_btn_suivant"
        android:theme="@style/boutongrise"
        app:layout_constraintBottom_toBottomOf="@+id/img_produit"
        app:layout_constraintLeft_toRightOf="@id/img_produit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_produit" />

    <TextView
        android:id="@+id/txt_nomproduit"
        style="@style/text_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_produit" />

    <ScrollView
        android:id="@+id/scr_descriptionproduit"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/cadre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sp_tailleproduit"
        app:layout_constraintTop_toBottomOf="@id/txt_nomproduit"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".38">

        <TextView
            android:id="@+id/txt_descriptionproduit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="12"
            android:padding="5dp"
            android:textSize="@dimen/texte_long" />
    </ScrollView>

    <TextView
        android:id="@+id/txt_tarifproduit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sp_tailleproduit"
        app:layout_constraintLeft_toLeftOf="@id/sp_tailleproduit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/scr_descriptionproduit" />

    <Spinner
        android:id="@+id/sp_tailleproduit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/taille"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/scr_descriptionproduit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_tarifproduit" />



    <TextView
        android:id="@+id/txt_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/app_footer"
        android:textSize="@dimen/tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
